[package]
name = "membership"
version = "0.1.0"
description = "Hypha DAO 2 Membership Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[dependencies]
anchor-lang = "0.30.1"
solana-program = "1.18.17"  # Assuming this is the latest compatible version

[features]
idl-build = ["anchor-lang/idl-build"]